--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header_content df">
+            <div class="header_content">
                 <img srcset="./assets/images/Logo.png 2x">
-                <ul class="header_menu df" >
+                <ul class="header_menu " >
                     <li class="header_menu--item" ><a class="menu-link" href="">Features</a></li>
                     <li class="header_menu--item"><a class="menu-link" href="">Pricing</a></li>
                     <li class="header_menu--item"><a class="menu-link" href="">Contact</a></li>
                 </ul>
-                <ul class="menu_toggle df">
+                <ul class="menu_toggle">
                     <li><a  class="button button--signin" href="">Log In</a></li>
                     <li><a class="button button--outline" href="">Start now</a></li>
                     <!-- <span class="btn">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </section>
-            <section class="content df-center">
+            <section class="content ">
                 <div class="content_blog">
                     <img srcset="./assets/images/image2.png 2x">
                 </div>
@@ -126,7 +126,7 @@
                            </div>
                            <div class="creativity-list_item">
                                <img srcset="./assets/images/truck.png 2x">
-                               <p>At nam minimum ponderum. Est audiam animal molestiae te. Ex
+                               <p class="creativity-list_item--text">At nam minimum ponderum. Est audiam animal molestiae te. Ex
                                     duo eripuit mentitum.
                                </p>
                            </div>
